--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-on-screen",
-  "version": "2.1.1",
+  "name": "lixibox-react-on-screen",
+  "version": "2.1.1-alpha.1",
   "description": "A wrapper component to track if your react component is visible on screen",
   "keywords": [
     "react",
